# CCA-RAG

./: .env.development  .env.example  .env.production  .gitignore  DEPENDENCY_FIXED.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_TROUBLESHOOTING.md  DEPLOY_NOW.md  Dockerfile  Dockerfile.embedded  Dockerfile.original  GITHUB_SECRETS_SETUP.md  PRODUCTION_CONFIG_STATUS.md  README.md  SETUP_GUIDE.md  create_indexes.py  create_indexes_simple.py  debug_env.py  deploy-direct.ps1  deploy-direct.sh  deploy.sh  docker-compose.yml  manual_setup_guide.py  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci-cd.yml  complete-deploy.yml  deploy.yml  direct-cloud-run-deploy.yml  minimal-deploy.yml  production-deploy.yml.disabled  self-contained-deploy.yml  simple-deploy.yml  zero-config-deploy.yml
app/: __init__.py  main.py  startup.py
app/core/: config.py  database.py  logging.py
app/models/: __init__.py  schemas.py
app/services/: __init__.py  google_drive_service.py  google_sheets_service.py  memory_manager.py  rag_service.py
app/utils/: auth.py
docs/: DEPLOYMENT_SUMMARY.md  TROUBLESHOOTING.md
scripts/: configure_production.sh  monitor_deployment.py
tests/: conftest.py  test_main.py
tests/unit/: test_memory_manager.py
